Fix API Documentation
